Add a pthread cancel stub for sigwait, following Onno van der Linden's analysis in PR 45131.  Kindly tested by Hisashi T Fujinaka (using csup as the test case) with a successful outcome.

OK martin@